--- a/app/src/main/res/layout/folder_item.xml
+++ b/app/src/main/res/layout/folder_item.xml
@@ -19,7 +19,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:background="@color/black"
+            android:background="@color/yellow"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
