--- a/app/src/main/res/layout/fragment_folder.xml
+++ b/app/src/main/res/layout/fragment_folder.xml
@@ -11,7 +11,7 @@
         android:id="@+id/recyclerFolder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/yellow_dark"
         android:columnWidth="90dp">
 
     </androidx.recyclerview.widget.RecyclerView>
