--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -57,7 +57,7 @@
         android:id="@+id/rvPictures"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/yellow_dark"
         android:columnWidth="90dp">
 
     </androidx.recyclerview.widget.RecyclerView>
