--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="semi_transparent_black">#33000000</color>
+    <color name="yellow">#E69100</color>
+    <color name="yellow_dark">#CF8200</color>
 </resources>
