--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:fitsSystemWindows="true"
+            android:fitsSystemWindows="false"
             app:headerLayout="@layout/header_navigation"
             app:menu="@menu/activity_main_drawer"
             app:itemTextAppearance="@style/NavigationViewStyle"/>
