--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,9 @@
     <color name="transparent_black_background">#26000000</color>
     <color name="yellow">#E69100</color>
     <color name="yellow_dark">#CF8200</color>
+
+    <color name="deep_navy">#276678</color>
+    <color name="deep_blue">#1687A7</color>
+    <color name="gray_blue">#D3E0EA</color>
+    <color name="light_gray">#D3E0EA</color>
 </resources>
