--- a/app/src/main/res/layout/fragment_picture_show.xml
+++ b/app/src/main/res/layout/fragment_picture_show.xml
@@ -53,7 +53,7 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/trash_white"
+                android:src="@drawable/locked_white"
                 android:layout_marginLeft="50dp"
                 android:id="@+id/imgDelete"/>
         </LinearLayout>
