--- a/app/src/main/res/layout/fragment_locked.xml
+++ b/app/src/main/res/layout/fragment_locked.xml
@@ -2,22 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_lock"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/yellow_dark"
-    tools:context=".ui.hidden.locked.LockedFragment">
+    tools:context=".ui.locked.LockedFragment">
 
-    <TextView
-        android:text="@string/locked"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvLockPictures"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_height="match_parent"
+        android:background="@color/yellow_dark"
+        android:columnWidth="90dp">
+    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
