--- a/app/src/main/res/layout/fragment_picture_show.xml
+++ b/app/src/main/res/layout/fragment_picture_show.xml
@@ -55,7 +55,7 @@
                 android:layout_height="25dp"
                 android:src="@drawable/locked_white"
                 android:layout_marginLeft="50dp"
-                android:id="@+id/imgDelete"/>
+                android:id="@+id/imgLock"/>
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/indicatorRecycler"
